--- a/_data/photos.yml
+++ b/_data/photos.yml
@@ -9,7 +9,7 @@
 
 - img: /assets/img/photos/norris.jpg
   portrait: true
-  text: 'I got to work with Norris to help share his story and journey to the 2016 Rio Olympics. This project included headshots and a web series called Road To Gold.'
+  text: 'I got to work with Norris Frederick to help share his story and journey to the 2016 Rio Olympics. This project included headshots and a web series called Road To Gold.'
 
 - img: /assets/img/photos/tony.jpg
   portrait: true
