Updated Title on Design

--- a/_data/design.yml
+++ b/_data/design.yml
@@ -13,5 +13,5 @@
   text: 'I made this Isometric illustration for Adaptiva reaching 1,000 followers on Twitter.'
 
 - img: /assets/img/design/windows-10-primer.png
-  title: 'Windows 10 Primer'
+  title: 'Windows 10 OSD Primer'
   text: 'Adaptiva needed an illustration for a blog on navigating Windows 10. So, I illustrated this scene of a ship navigating with the stars.'
