--- a/_data/adaptiva.yml
+++ b/_data/adaptiva.yml
@@ -10,5 +10,5 @@
 - img: /assets/img/adaptiva/windows-10-primer.png
   text: 'PBR&B four loko vexillologist, fap blue bottle fanny pack austin prism cronut shoreditch. Shoreditch occupy beard 3 wolf moon.'
 
-- img: /assets/img/adaptiva/twitter-1k.jpg
-  text: 'PBR&B four loko vexillologist, fap blue bottle fanny pack austin prism cronut shoreditch. Shoreditch occupy beard 3 wolf moon.'
+# - img: /assets/img/adaptiva/twitter-1k.jpg
+#   text: 'PBR&B four loko vexillologist, fap blue bottle fanny pack austin prism cronut shoreditch. Shoreditch occupy beard 3 wolf moon.'
