--- a/_data/design.yml
+++ b/_data/design.yml
@@ -1,17 +1,18 @@
 - img: /assets/img/design/april-fools.png
   title: 'April Fools'
-  text: "I make illustrations for Adaptiva's social media sometimes. I particularly enjoyed this one."
+  text: "I make illustrations for Adaptiva's social media sometimes. I particularly enjoyed this one of Mr. T."
 
-# - img: /assets/img/design/my-it-forum.jpg
-#   text: 'PBR&B four loko vexillologist, fap blue bottle fanny pack austin prism cronut shoreditch. Shoreditch occupy beard 3 wolf moon.'
+- img: /assets/img/design/my-it-forum.jpg
+  title: 'Rest Easy'
+  text: 'Social image for making SCCM your universal enforcer.'
 
 # - img: /assets/img/design/tgif.png
 #   text: 'PBR&B four loko vexillologist, fap blue bottle fanny pack austin prism cronut shoreditch. Shoreditch occupy beard 3 wolf moon.'
 
-- img: /assets/img/design/twitter-1k.jpg
-  title: '1K Twitter Follwers'
-  text: 'I made this Isometric illustration for Adaptiva reaching 1,000 followers on Twitter.'
+# - img: /assets/img/design/twitter-1k.jpg
+#   title: '1K Twitter Follwers'
+#   text: 'I made this Isometric illustration for Adaptiva reaching 1,000 followers on Twitter.'
 
 - img: /assets/img/design/windows-10-primer.png
   title: 'Windows 10 OSD Primer'
-  text: 'Adaptiva needed an illustration for a blog on navigating Windows 10. So, I illustrated this scene of a ship navigating with the stars.'
+  text: 'Adaptiva needed an illustration for a blog on navigating Windows 10 so I illustrated this scene of a ship navigating with the stars.'
