--- a/_data/motion.yml
+++ b/_data/motion.yml
@@ -1,3 +1,8 @@
+- src: 'https://player.vimeo.com/video/347375808'
+  thumb: '/assets/img/thumbs/abm-adaptiva-thumb.jpg'
+  title: 'Olympic Athlete Norris Frederick'
+  desc: "I made 100 custom videos like this one for Adaptiva's top 100 prospects."
+
 - src: 'https://player.vimeo.com/video/341677162'
   thumb: '/assets/img/thumbs/curling-thumb.png'
   title: 'Curling Party'
