--- a/_data/motion.yml
+++ b/_data/motion.yml
@@ -1,6 +1,6 @@
 - src: 'https://player.vimeo.com/video/347375808'
   thumb: '/assets/img/thumbs/abm-adaptiva-thumb.jpg'
-  title: 'Olympic Athlete Norris Frederick'
+  title: 'Account Based Marketing Video | Marriott'
   desc: "I made 100 custom videos like this one for Adaptiva's top 100 prospects."
 
 - src: 'https://player.vimeo.com/video/341677162'
